Removed duplication and complexity errors from notification layer